--- a/devcom/index.html
+++ b/devcom/index.html
@@ -668,7 +668,7 @@
     </div>
 </section>
 
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/js.js"></script>
 <script>
     $(function() {
