added lincy to page

--- a/devcom/index.html
+++ b/devcom/index.html
@@ -668,6 +668,39 @@
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Brown">
                 <h2>
+                    <span>Lincy Thomas</span>
+                    <strong>
+                        <i class="fa fa-fw fa-star"></i>
+                        Developer
+                    </strong>
+                </h2>
+                <div class="mc-content">
+                    <div class="img-container">
+                        <img class="img-responsive" src="  img/22.jpg">
+                    </div>
+                    <div class="mc-description">
+                        host your website
+
+                      </br/>
+                    </div>
+                </div>
+                <a class="mc-btn-action">
+                    <i class="fa fa-bars"></i>
+                </a>
+                <div class="mc-footer">
+                    <h4>
+                        Social
+                    </h4>
+                    <a class="fa fa-fw fa-facebook"></a>
+                    <a class="fa fa-fw fa-twitter"></a>
+                    <a class="fa fa-fw fa-linkedin"></a>
+                    <a class="fa fa-fw fa-google-plus"></a>
+                </div>
+            </article>
+        </div>
+         <div class="col-md-4 col-sm-6 col-xs-12">
+            <article class="material-card Brown">
+                <h2>
                     <span>MURuli Annan</span>
                     <strong>
                         <i class="fa fa-fw fa-star"></i>
