--- a/devcom/index.html
+++ b/devcom/index.html
@@ -666,7 +666,7 @@
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
-            <article class="material-card Brown">
+            <article class="material-card Blue-Grey">
                 <h2>
                     <span>Lincy Thomas</span>
                     <strong>
@@ -699,7 +699,7 @@
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
-            <article class="material-card Brown">
+            <article class="material-card Deep-Orange">
                 <h2>
                     <span>MURuli Annan</span>
                     <strong>
