--- a/devcom/index.html
+++ b/devcom/index.html
@@ -676,7 +676,7 @@
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="  img/22.jpg">
+                        <img class="img-responsive" src="  img/22.jpeg">
                     </div>
                     <div class="mc-description">
                         host your website
