--- a/devcom/index.html
+++ b/devcom/index.html
@@ -646,7 +646,7 @@
                         <img class="img-responsive" src="  img/20.jpg">
                     </div>
                     <div class="mc-description">
-                        eda manda host cheyada
+                        <a href="http://sharadjoe.github.io/index.html">  Basic web project</a>
 
                       </br/>
                     </div>
